products/photocrati_nextgen/modules/nextgen_basic_gallery/static/slideshow/nextgen_basic_slideshow.css
body {
    overflow-x: hidden;
}

#page {
    overflow: visible;
}

/* ----------- Slideshow -------------*/

.slideshow {
    margin-left: auto;
    margin-right: auto;
    text-align: center;
    outline: none;
}

.slideshowlink {
}

/* ----------- JS Slideshow -------------*/

.ngg-slideshow {
    overflow: hidden;
    position: relative;
    margin-left: auto;
    margin-right: auto;
    text-align: center;
}

.ngg-slideshow * {
    vertical-align: middle;
}

.ngg-slideshow img {
	max-width: 100% !important; 
	width: auto;
	height: auto;
}

.ngg-slideshow .ngg-gallery-slideshow-image {
	position: relative;
	width: 100% !important;
	height: 100% !important;
	max-width: 100% !important;
	max-height: 100% !important;
}

.ngg-slideshow .image-placeholder {
	visibility: hidden;
}

/* See also : http://www.brunildo.org/test/img_center.html */
.ngg-slideshow-loader {
    display: table-cell;
    text-align: center;
    vertical-align: middle;
}

.ngg-slideshow-loader img {
    background: none !important;
    border: 0 none !important;
    margin: auto !important;
}

